public/css/style_admin.css
/* ... */
nav#navbar{
  background-color: transparent;
  margin-bottom: 15px;
}
nav#navbar .navbar-brand {
  color: #0059b8;
  font-weight: 400;
  font-size: 28px;
}
nav#navbar .navbar-brand div,
nav#navbar .navbar-brand img {
}
nav#navbar .navbar-brand div {
  display: inline;
  vertical-align: bottom;
  padding-left: 10px;
}
nav#navbar .navbar-brand img {
  max-height: 70px;
}
nav#navbar a.nav-link {
  color: #0059b8;
  text-transform: capitalize;
  font-variant: small-caps;
  font-size: 1.5rem;
  margin-right: 25px;
}
nav#navbar div#navbarInside {
  width: 100%;
}
a.navbar-item.logo {
  padding: 0 10px;
}
.navbar.is-fixed-top {
  top: 0;
  background: transparent;
}
@media only screen and (max-width: 768px) {
  header {
    width: auto;
  }
  nav#navbar .navbar-brand div {
    display: none;
  }
  nav#navbar ul.navbar-nav {
    margin-top: 200px;
    text-align: center;
  }
}
@media only screen and (min-width: 768px) {
  nav#navbar {
    display: block;
  }
}


/*
  Navbar Bulma
*/
html.loggedin-true nav.navbar .navbar-end .buttons {
  display: none
}


/*
  Navbar settings
*/
div#navbarSettings {
  background: whitesmoke;
  position: fixed;
  z-index: 666;
  width: 100%;
  margin: 0 -20px;
  -webkit-box-shadow: 0 6px 5px 0 rgba(0,0,0,0.75);
  -moz-box-shadow: 0 6px 5px 0 rgba(0,0,0,0.75);
  box-shadow: 0 6px 5px 0 rgba(0,0,0,0.75);
}
div#navbarSettings span.nav-item a,
div#navbarSettings a.nav-link {
  color: black;
}



/*
  Settings overview
*/
div#settings {
  background: white;
  border-radius: 10px;
  margin-left: auto;
  margin-right: auto;
  max-width: 500px;
  text-align: center;
  border: 1px solid #bab2b2;
  padding: 1rem;
}
div#settings div {
  margin-bottom: 0;
  margin-top: 0;
  padding-top: 0;
}
div#settings .button {
  width: 200px;
  background: white;
  -webkit-box-shadow: 1px 1px 5px 0 rgba(138,138,138,1);
  -moz-box-shadow: 1px 1px 5px 0 rgba(138,138,138,1);
  box-shadow: 1px 1px 5px 0 rgba(138,138,138,1);
}
div#settings .button:hover {
  color: #042c57;
}
div#settings hr {
  margin: .5rem 0;
}


/*
  Settings page
*/
div#settingsEdit {
  background: #ffffffd6;
  border-radius: 10px;
  margin-left: auto;
  margin-right: auto;
  max-width: 1400px;
  padding: 10px;
}


/*
  Blog & Page post
*/
div#blogData,
div#pageData {
  width: 100%;
  margin-left: auto;
  margin-right: auto;
}
div#blogData.new,
div#pageData.new {
  max-width: 500px;
}
div#blogData.new div.blogRequired,
div#pageData.new div.pageRequired {
  margin-top: 1rem;
  width: 300px;
  margin-left: auto;
  margin-right: auto;
}
div#blogData.new div.field,
div#pageData.new div.field {
  margin-top: 1rem;
}
button.newblogSave,
button.newpageSave,
div.blogOptions.main div.buttonGroup,
div.pageOptions.main div.buttonGroup {
  margin-top: 1.3rem;
}
div#blogHeader,
div#pageHeader {
  max-width: 1100px;
  margin-left: auto;
  margin-right: auto;
}
span.blogDelete,
span.pageDelete {
  margin-right: auto;
  margin-left: auto;
}
div.blogOptions,
div.pageOptions {
  display: none;
  background: white;
  padding: 5px;
  border-radius: 3px;
  border: 1px solid #80808094;
  margin-top: 10px;
  max-width: 500px;
}
div#blogData.new div.blogOptions,
div#pageData.new div.pageOptions,
div.blogOptions.main,
div.pageOptions.main {
  display: block;
}
div.blogOptions .input,
div.blogOptions .select,
div.blogOptions .textarea,
div.pageOptions .input,
div.pageOptions .select,
div.pageOptions .textarea {
  font-size: .9rem
}
@media only screen and (max-width: 768px) {
  div#blogData button,
  div#pageData button {
    margin-top: 15px;
  }
}



/*
    All blog posts
*/
div#allblogPosts .list-group {
  margin-left: auto;
  margin-right: auto;
  max-width: 800px;
  width: 100%;
}
div#allblogPosts .list-group-item {
  background: white;
  border: 1px solid #bcbcbc5c;
  display: block;
  margin-left: auto;
  margin-right: auto;
  padding: 1rem;
  width: 100%;
}
div#allblogPosts .editChip {
  font-size: 0.8rem;
  background: grey;
  color: white;
  padding: 6px;
  border-radius: 10px;
}
div#allblogPosts .editChip a {
  color: white;
}
div#allblogPosts a.blognameEdit {
  color: black;
}
div#allblogPosts .category,
div#allblogPosts .tags {
  align-items: center;
  border-radius: 4px;
  display: inline-flex;
  font-size: .75rem;
  height: 2em;
  justify-content: center;
  line-height: 1.5;
  margin-top: .7rem;
  padding-left: .75em;
  padding-right: .75em;
  white-space: nowrap;
}
div#allblogPosts .category {
  background-color: #959595;
  color: #ffffff;
}
div#allblogPosts .tags {
  background-color: #f5f5f5;
  color: #4a4a4a;
  margin-bottom: 0;
}


/*
    All pages
*/
div#allpagePosts .list-group {
  margin-left: auto;
  margin-right: auto;
  max-width: 800px;
  width: 100%;
}
div#allpagePosts .list-group-item {
  background: white;
  border: 1px solid #bcbcbc5c;
  display: block;
  margin-left: auto;
  margin-right: auto;
  padding: 1rem;
  width: 100%;
}
div#allpagePosts a.list-group-item {
  color: black;
}


/*
  Users
*/
div#users {
  background: #ffffffd6;
  border-radius: 10px;
  margin-left: auto;
  margin-right: auto;
  max-width: 800px;
  padding: 10px;
}
div#users div.field {
  margin-bottom: 10px;
}
div#users input,
div#users select{
  font-size: .9rem;
}
div#users span a.delete {
  color: white;
}
div#usersAddContainer {
  margin-bottom: 20px;
}
form#usersAdd {
  border: 1px solid grey;
  width: 300px;
  padding: 10px;
  border-radius: 10px;
  margin-top: 10px;
}
div#users label {
  margin-right: 10px;
  width: 50px;
}
div#users select {
  width: 205px;
  margin-left: 3px;
}


/*
  Users profile
*/
div#user {
  max-width: 800px;
  margin-left: auto;
  margin-right: auto;
}
div#user label {
  width: 200px;
  margin-bottom: 0;
  margin-top: .5rem;
}
div#user #editProfilePhoto {
  border-radius: 2px;
  border: 1px solid grey;
  margin-left: auto;
  margin-right: auto;
  max-width: 406px;
  padding: 5px 2px;
  text-align: center;
  background: white;
}
div#user div.twofa-container {
  border: 1px solid black;
  padding: 5px;
}
/* ... */

